cluster/apps/activepieces/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: activepieces
  namespace: activepieces
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - "ap.mert574.dev"
    - "ap.internal"
  rules:
    - backendRefs:
        - name: activepieces
          port: 80
